@@ -20,14 +20,36 @@ repositories {
 
 allprojects {
     tasks.withType(JavaCompile).configureEach {
-        targetCompatibility = JavaVersion.VERSION_1_8
-        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = 8
+        sourceCompatibility = 8
+
+        options.forkOptions.jvmArgs += [
+                '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
+        ]
     }
 }
 
 dependencies {
-    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
+
+    compileOnly "org.projectlombok:lombok:1.18.42"
+    annotationProcessor "org.projectlombok:lombok:1.18.42"
+
+    // testImplementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    // testImplementation "com.github.Anuken.Arc:arc-core:$mindustryVersion"
+    // testImplementation "com.github.Anuken.Arc:natives:$mindustryVersion"
+    // testImplementation "com.github.Anuken.Arc:backend-headless:$mindustryVersion"
+    // testImplementation(platform("org.junit:junit-bom:6.0.0"))
+    // testImplementation "org.junit.jupiter:junit-jupiter"
+    // testRuntimeOnly "org.junit.platform:junit-platform-launcher"
 }
 
 jar {
@@ -57,7 +79,11 @@ tasks.register("jarAndroid") {
         //collect dependencies needed for desugaring
         def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect{ "--classpath $it.path" }.join(" ")
 
-        def buildToolsRoot = new File("$sdkRoot/build-tools/").listFiles().sort { x, y -> x.name <=> y.name }.first().absolutePath
+        def buildToolsRoot
+        if (project.hasProperty("buildToolsVersion"))
+            buildToolsRoot = new File("$sdkRoot/build-tools/${project.properties["buildToolsVersion"]}").absolutePath
+        else
+            buildToolsRoot = new File("$sdkRoot/build-tools/").listFiles().sort { x, y -> x.name <=> y.name }.first().absolutePath
 
         //dex and desugar files - this requires d8 in your PATH
         "env d8 $dependencies --min-api 14 --output ${jar.archiveBaseName.get()}Android.jar ${jar.archiveBaseName.get()}Desktop.jar"
@@ -78,6 +104,9 @@ tasks.named("build") {
     dependsOn deploy
 }
 
-test {
-    useJUnitPlatform()
-}
+// test {
+//     useJUnitPlatform()
+//     testLogging {
+//         events "passed", "skipped", "failed"
+//     }
+// }
